crates/aven-check/tests/fixtures/check/valid/bound-local-binders.av
result =
  base = 1
  apply = (x) => x + base
  apply(2)

matched = @Some(1) ?>
  @Some(n) => n
