crates/aven-check/tests/fixtures/check/invalid/open-variant-non-exhaustive.av
source = @A
result = source ?>
  @A => 1
